[gd_scene load_steps=8 format=2]

[ext_resource path="res://Raw assets/Jester/Jon's shitty placeholders/falcon.jpg" type="Texture" id=1]
[ext_resource path="res://Raw assets/AnimationSheets/JesterBroom.png" type="Texture" id=2]
[ext_resource path="res://Raw assets/Jester/Jon's shitty placeholders/glasses.png" type="Texture" id=3]
[ext_resource path="res://Raw assets/Jester/Jon's shitty placeholders/space.jpg" type="Texture" id=4]
[ext_resource path="res://LevelScenes/LobbyBtn.gd" type="Script" id=5]
[ext_resource path="res://SoundEffects/solo_trimmed.mp3" type="AudioStream" id=6]
[ext_resource path="res://Raw assets/Jester/Jon's shitty placeholders/blaster.jpg" type="Texture" id=7]

[node name="Node2D" type="Node2D"]

[node name="Space" type="Sprite" parent="."]
visible = false
position = Vector2( 247, 134 )
texture = ExtResource( 4 )

[node name="Falcon" type="Sprite" parent="."]
visible = false
position = Vector2( 247, 134 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 244, 128 )
texture = ExtResource( 2 )
flip_h = true
hframes = 10

[node name="Glasses" type="Sprite" parent="."]
visible = false
position = Vector2( 246, 127 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 217.0
margin_top = 61.0
margin_right = 697.0
margin_bottom = 331.0
text = "You Win!!"

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="LobbyBtn" type="Button" parent="."]
visible = false
margin_left = 135.0
margin_top = 206.0
margin_right = 342.0
margin_bottom = 226.0
text = "Return To Lobby"
script = ExtResource( 5 )

[node name="WinPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Blaster" type="Sprite" parent="."]
visible = false
position = Vector2( 252, 132 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 7 )

[node name="BlasterTimer" type="Timer" parent="."]
wait_time = 26.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="LobbyBtn" method="_on_Timer_timeout"]
[connection signal="pressed" from="LobbyBtn" to="LobbyBtn" method="_on_LobbyBtn_pressed"]
[connection signal="timeout" from="BlasterTimer" to="LobbyBtn" method="_on_BlasterTimer_timeout"]
